test/ui/tests/fail/class-async-context-ref.rs
use neon::prelude::*;

struct Example;

#[neon::class]
impl Example {
    #[neon(async)]
    fn method(&self, _cx: &mut FunctionContext) {}
}

fn main() {}
